lib/src/compiler/tests/testdata/errors/115.out
error[E033]: invalid pattern modifier
 --> line:3:20
  |
3 |     $a = { 01 02 } nocase
  |                    ^^^^^^ this modifier can't be applied to a hex pattern
  |